--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Deploy to Render
         run: |
-          curl -X POST https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}/deploys \
+          curl -X POST https://api.render.com/deploys \
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
           -H "Content-Type: application/json" \
-          -d '{}'
+          -d '{"serviceId":"${{ secrets.RENDER_SERVICE_ID }}"}'
